# nashville-numbers

./: .coverage  .gitignore  AGENTS.md  AUDIO_UPDATE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NAM_MUSIC_EXPANSION_IDEA.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  design-audit.md  music-theory-deep-research.md  nashville-numbers-research-3-7-2026.md  package-lock.json  prompt.md  pyproject.toml  run.ps1  test_gui.py  test_perf.py  tmpclaude-c9c6-cwd
.Jules/: palette.md
.claude/: dev-server.py  launch.json
.jules/: bolt.md  fretboard_notes.md  palette.md  sentinel.md
src/nashville_numbers/: __init__.py  cli.py  converter.py  formatting.py  gui.py  gui_http.py  key_inference.py  midi_export.py  music_lab.py  output_contract.py  parser.py  sequence.py  tone_library.py  voicing.py
src/nashville_numbers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nashville_numbers/audio/: __init__.py  config.py  engine.py  errors.py  installer.py  runtime_support.py  scheduler.py  service.py
tests/: test_audio_engine.py  test_audio_installer.py  test_audio_scheduler.py  test_audio_service.py  test_cli.py  test_conversion_golden.py  test_converter_branches.py  test_gui.py  test_input_limit.py  test_key_inference.py  test_key_inference_branches.py  test_midi_export.py  test_music_lab.py  test_output_contract.py  test_parser.py  test_security.py  test_sequence.py  test_spelling.py  test_tone_library.py  test_voicing.py
