[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nashville-numbers"
version = "0.1.0"
description = "Chord progression and Nashville Number System converter"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
nns-convert = "nashville_numbers.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
